--- a/hypr/hypridle.conf
+++ b/hypr/hypridle.conf
@@ -1,15 +1,21 @@
 general {
-    lock_cmd = bash -c 'if ! pw-cli ls Node | grep -q "WEBRTC VoiceEngine"; then pidof hyprlock || hyprlock; else echo "Call active, skipping lock"; fi'
-    before_sleep_cmd = bash -c 'if ! pw-cli ls Node | grep -q "WEBRTC VoiceEngine"; then hyprlock; else echo "Call active, skipping pre-sleep lock"; fi'
+    lock_cmd = bash -c "LOCKFILE=/tmp/hyprlock_active.lock; [ -f \$LOCKFILE ] && exit 0; pw-cli ls Node | grep -q 'WEBRTC VoiceEngine' && echo 'Call active, skipping lock' && exit 0; touch \$LOCKFILE; hyprlock; rm -f \$LOCKFILE"
+    unlock_cmd = ""
+    before_sleep_cmd = bash -c "LOCKFILE=/tmp/hyprlock_active.lock; [ -f \$LOCKFILE ] && exit 0; pw-cli ls Node | grep -q 'WEBRTC VoiceEngine' && echo 'Call active, skipping pre-sleep lock' && exit 0; touch \$LOCKFILE; hyprlock; rm -f \$LOCKFILE"
     after_sleep_cmd = hyprctl dispatch dpms on
+    ignore_dbus_inhibit = false
+    ignore_systemd_inhibit = false
 }
 
 listener {
     timeout = 300
-    on-timeout = bash -c 'if ! pw-cli ls Node | grep -q "WEBRTC VoiceEngine"; then hyprlock; else echo "Call active, skipping lock"; fi'
+    on-timeout = bash -c "LOCKFILE=/tmp/hyprlock_active.lock; [ -f \$LOCKFILE ] && exit 0; pw-cli ls Node | grep -q 'WEBRTC VoiceEngine' && echo 'Call active, skipping lock listener' && exit 0; touch \$LOCKFILE; hyprlock; rm -f \$LOCKFILE"
+    on-resume = ""
 }
 
 listener {
     timeout = 600
-    on-timeout = bash -c 'if ! pw-cli ls Node | grep -q "WEBRTC VoiceEngine"; then systemctl suspend; else echo "Call active, skipping suspend"; fi'
+    on-timeout = bash -c "pw-cli ls Node | grep -q 'WEBRTC VoiceEngine' && echo 'Call active, skipping suspend listener' && exit 0; systemctl suspend"
+    on-resume = ""
 }
+
