--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -38,6 +38,7 @@ $fileManager = dolphin
 # $menu = wofi --show drun
 $menu = walker
 $browser = zen-browser
+$discord = discord &
 
 
 #################
@@ -244,6 +245,7 @@ bind = $mainMod, R, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
 bind = $mainMod, B, exec, $browser
+bind = $mainMod, D, exec, $discord
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
@@ -340,5 +342,9 @@ windowrulev2 = opacity 0.85 0.7,class:^(kitty)$
 windowrulev2 = opacity 0.93 0.7,class:^(code-oss)$
 
 windowrulev2 = opacity 1.0 override 1.0 override, class:^(discord)$
+
+# Youtube rules
+windowrulev2 = opacity 1.0 override 1.0 override, float, title:^(Picture-in-Picture)$
+windowrulev2 = opacity 1.0 override 1.0 override, title:^(.*YouTube.*)$
 
 
