--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -56,6 +56,11 @@ exec-once = elephant service enable & systemctl --user start elephant.service
 exec-once = walker --gapplication-service
 exec-once = hypridle
 
+# Dark theme
+#exec = gsettings set org.gnome.desktop.interface gtk-theme "adwaita-dark"   # for GTK3 apps
+#exec = gsettings set org.gnome.desktop.interface color-scheme "prefer-dark"   # for GTK4 apps
+
+
 #############################
 ### ENVIRONMENT VARIABLES ###
 #############################
@@ -65,7 +70,7 @@ exec-once = hypridle
 env = XCURSOR_SIZE,24
 env = HYPRCURSOR_SIZE,24
 
-
+env = QT_QPA_PLATFORMTHEME,qt5ct
 ###################
 ### PERMISSIONS ###
 ###################
@@ -91,8 +96,8 @@ env = HYPRCURSOR_SIZE,24
 
 # https://wiki.hypr.land/Configuring/Variables/#general
 general {
-    gaps_in = 5
-    gaps_out = 20
+    gaps_in = 3
+    gaps_out = 5
 
     border_size = 1
 
@@ -296,6 +301,10 @@ bind = $mainMod SHIFT, LEFT, movewindow, l
 bind = $mainMod SHIFT, RIGHT, movewindow, r
 bind = $mainMod SHIFT, UP, movewindow, u
 bind = $mainMod SHIFT, DOWN, movewindow, d
+
+# Move workspace between monitors
+bind = $mainMod CTRL, LEFT, movecurrentworkspacetomonitor, l
+bind = $mainMod CTRL, RIGHT, movecurrentworkspacetomonitor, r 
 
 # Move/resize windows with mainMod + LMB/RMB and dragging
 bindm = $mainMod, mouse:272, movewindow
